<resources>
    <string name="app_name">XShopping</string>
	<string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_record">Record</string>
    <string name="title_story">Story</string>
    <string name="title_account">Account</string>
    <string name="facebook_app_id">220057282977034</string>
    <string name="fb_login_protocol_scheme">fb220057282977034</string>
</resources>
